fixed additional space on small screen, reworked burger menu style & functionality

--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -1,3 +1,16 @@
+.wrapp {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 1000;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: flex-end;
+	backdrop-filter: blur(8px);
+	background-color: rgba(255, 255, 255, 0.1);
+}
+
 .burgerMenu {
 	height: 100dvh;
 	width: 240px;
@@ -6,12 +19,7 @@
 	border-top-left-radius: 12px;
 	border-bottom-left-radius: 12px;
 	background: #ffffff;
-	position: fixed;
-	top: 0;
-	right: 0;
-	z-index: 1000;
 	animation: slideInRight 0.4s cubic-bezier(0.25, 1, 0.5, 1) forwards;
-	display: none;
 }
 
 .logo {
@@ -35,10 +43,11 @@
 }
 
 @keyframes slideInRight {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
+	from {
+		transform: translateX(100%);
+	}
+
+	to {
+		transform: translateX(0);
+	}
 }
