--- a/src/sections/Consultation/Consultation.module.css
+++ b/src/sections/Consultation/Consultation.module.css
@@ -261,6 +261,7 @@ input,
 
 		&>p {
 			font-size: 9px;
+			width: 100%;
 		}
 	}
 }
